Refactored. Removed Horoscope button

--- a/HoroscopeLab-Unit4/Base.lproj/Main.storyboard
+++ b/HoroscopeLab-Unit4/Base.lproj/Main.storyboard
@@ -18,7 +18,7 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9FA-ZD-ckJ">
                                 <rect key="frame" x="20" y="78" width="374" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="t3o-VT-swH"/>
+                                    <constraint firstAttribute="height" constant="30" id="jUp-ch-QMx"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -27,7 +27,7 @@
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="enter name" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ruN-gk-YS8">
                                 <rect key="frame" x="20" y="181" width="374" height="34"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="34" id="KGh-mT-XcB"/>
+                                    <constraint firstAttribute="height" constant="34" id="iAN-F2-xdZ"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
@@ -35,7 +35,7 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sign" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EGv-pT-012">
                                 <rect key="frame" x="20" y="116" width="374" height="31"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="31" id="W1B-cw-ctX"/>
+                                    <constraint firstAttribute="height" constant="31" id="eA6-Mb-a7k"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                 <nil key="textColor"/>
@@ -46,20 +46,13 @@
                             </pickerView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qVP-H4-kcZ">
                                 <rect key="frame" x="20" y="433" width="374" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="akJ-b2-619"/>
-                                </constraints>
                                 <state key="normal" title="Save Settings"/>
                                 <connections>
                                     <action selector="saveUserDataButton:" destination="M0d-5P-fjp" eventType="touchUpInside" id="42i-79-0XR"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bes-pc-Rkw">
-                                <rect key="frame" x="20" y="471" width="374" height="30"/>
-                                <state key="normal" title="Horoscope"/>
-                            </button>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="8Ex-Ia-yOV">
-                                <rect key="frame" x="20" y="509" width="374" height="353"/>
+                                <rect key="frame" x="20" y="461" width="374" height="353"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -69,29 +62,26 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="9FA-ZD-ckJ" firstAttribute="leading" secondItem="EGv-pT-012" secondAttribute="leading" id="19e-w5-YbC"/>
-                            <constraint firstItem="qVP-H4-kcZ" firstAttribute="leading" secondItem="bes-pc-Rkw" secondAttribute="leading" id="1ii-ge-9mI"/>
-                            <constraint firstItem="9FA-ZD-ckJ" firstAttribute="leading" secondItem="Zgp-9u-MXf" secondAttribute="leadingMargin" id="4CM-wD-At3"/>
-                            <constraint firstItem="u3o-hK-fia" firstAttribute="leading" secondItem="4tD-ey-wye" secondAttribute="leading" id="5hd-DS-CL5"/>
-                            <constraint firstItem="9FA-ZD-ckJ" firstAttribute="top" secondItem="4tD-ey-wye" secondAttribute="top" constant="34" id="5zp-J7-IlG"/>
-                            <constraint firstItem="bes-pc-Rkw" firstAttribute="leading" secondItem="8Ex-Ia-yOV" secondAttribute="leading" id="D1h-04-MEv"/>
-                            <constraint firstItem="qVP-H4-kcZ" firstAttribute="top" secondItem="u3o-hK-fia" secondAttribute="bottom" constant="57" id="DxQ-e7-e2k"/>
-                            <constraint firstItem="qVP-H4-kcZ" firstAttribute="trailing" secondItem="bes-pc-Rkw" secondAttribute="trailing" id="Eiw-vK-Zec"/>
-                            <constraint firstItem="ruN-gk-YS8" firstAttribute="top" secondItem="EGv-pT-012" secondAttribute="bottom" constant="34" id="HNw-fm-HA7"/>
-                            <constraint firstItem="qVP-H4-kcZ" firstAttribute="centerY" secondItem="Zgp-9u-MXf" secondAttribute="centerY" id="HkK-rM-ZQA"/>
-                            <constraint firstItem="bes-pc-Rkw" firstAttribute="trailing" secondItem="8Ex-Ia-yOV" secondAttribute="trailing" id="OFS-lM-1FC"/>
-                            <constraint firstItem="ruN-gk-YS8" firstAttribute="centerX" secondItem="u3o-hK-fia" secondAttribute="centerX" id="Ofj-d6-RCK"/>
-                            <constraint firstItem="8Ex-Ia-yOV" firstAttribute="bottom" secondItem="4tD-ey-wye" secondAttribute="bottom" id="PBk-ls-ObT"/>
-                            <constraint firstItem="9FA-ZD-ckJ" firstAttribute="trailing" secondItem="Zgp-9u-MXf" secondAttribute="trailingMargin" id="Qmn-Oz-fdT"/>
-                            <constraint firstItem="ruN-gk-YS8" firstAttribute="leading" secondItem="qVP-H4-kcZ" secondAttribute="leading" id="RBQ-pf-a1s"/>
-                            <constraint firstItem="bes-pc-Rkw" firstAttribute="top" secondItem="qVP-H4-kcZ" secondAttribute="bottom" constant="8" id="Sam-dU-5PX"/>
-                            <constraint firstItem="EGv-pT-012" firstAttribute="top" secondItem="9FA-ZD-ckJ" secondAttribute="bottom" constant="8" id="bKY-Un-oB4"/>
-                            <constraint firstItem="9FA-ZD-ckJ" firstAttribute="trailing" secondItem="EGv-pT-012" secondAttribute="trailing" id="dFn-Bb-vFE"/>
-                            <constraint firstItem="EGv-pT-012" firstAttribute="leading" secondItem="ruN-gk-YS8" secondAttribute="leading" id="dYV-5w-BRo"/>
-                            <constraint firstItem="ruN-gk-YS8" firstAttribute="trailing" secondItem="qVP-H4-kcZ" secondAttribute="trailing" id="mg5-YE-dsT"/>
-                            <constraint firstItem="8Ex-Ia-yOV" firstAttribute="top" secondItem="bes-pc-Rkw" secondAttribute="bottom" constant="8" id="rgY-xZ-scg"/>
-                            <constraint firstItem="u3o-hK-fia" firstAttribute="top" secondItem="ruN-gk-YS8" secondAttribute="bottom" constant="8" id="uS7-Cj-Mre"/>
-                            <constraint firstItem="EGv-pT-012" firstAttribute="trailing" secondItem="ruN-gk-YS8" secondAttribute="trailing" id="vqT-Z9-Sr8"/>
+                            <constraint firstItem="EGv-pT-012" firstAttribute="leading" secondItem="ruN-gk-YS8" secondAttribute="leading" id="1de-zM-2RJ"/>
+                            <constraint firstItem="qVP-H4-kcZ" firstAttribute="top" secondItem="u3o-hK-fia" secondAttribute="bottom" constant="57" id="4lP-3o-LJo"/>
+                            <constraint firstItem="9FA-ZD-ckJ" firstAttribute="leading" secondItem="Zgp-9u-MXf" secondAttribute="leadingMargin" id="4mI-6e-11Z"/>
+                            <constraint firstItem="9FA-ZD-ckJ" firstAttribute="top" secondItem="4tD-ey-wye" secondAttribute="top" constant="34" id="6gI-Tk-8sz"/>
+                            <constraint firstItem="ruN-gk-YS8" firstAttribute="top" secondItem="EGv-pT-012" secondAttribute="bottom" constant="34" id="Awi-Dt-fdI"/>
+                            <constraint firstItem="u3o-hK-fia" firstAttribute="leading" secondItem="4tD-ey-wye" secondAttribute="leading" id="Bru-Tf-Cpf"/>
+                            <constraint firstItem="9FA-ZD-ckJ" firstAttribute="trailing" secondItem="Zgp-9u-MXf" secondAttribute="trailingMargin" id="GBY-xF-R0V"/>
+                            <constraint firstItem="4tD-ey-wye" firstAttribute="bottom" secondItem="8Ex-Ia-yOV" secondAttribute="bottom" constant="48" id="IJP-pb-4z9"/>
+                            <constraint firstItem="8Ex-Ia-yOV" firstAttribute="top" secondItem="u3o-hK-fia" secondAttribute="bottom" constant="85" id="Ig2-rI-oR5"/>
+                            <constraint firstItem="u3o-hK-fia" firstAttribute="top" secondItem="ruN-gk-YS8" secondAttribute="bottom" constant="8" id="Ixm-SB-v5E"/>
+                            <constraint firstItem="9FA-ZD-ckJ" firstAttribute="trailing" secondItem="EGv-pT-012" secondAttribute="trailing" id="KrC-CD-1at"/>
+                            <constraint firstItem="EGv-pT-012" firstAttribute="top" secondItem="9FA-ZD-ckJ" secondAttribute="bottom" constant="8" id="MPf-hQ-PGG"/>
+                            <constraint firstItem="ruN-gk-YS8" firstAttribute="leading" secondItem="qVP-H4-kcZ" secondAttribute="leading" id="Quj-LU-fDk"/>
+                            <constraint firstItem="qVP-H4-kcZ" firstAttribute="trailing" secondItem="8Ex-Ia-yOV" secondAttribute="trailing" id="cVw-D8-iuc"/>
+                            <constraint firstItem="ruN-gk-YS8" firstAttribute="trailing" secondItem="qVP-H4-kcZ" secondAttribute="trailing" id="eI8-4e-GLv"/>
+                            <constraint firstItem="EGv-pT-012" firstAttribute="trailing" secondItem="ruN-gk-YS8" secondAttribute="trailing" id="gCf-Sr-xHR"/>
+                            <constraint firstItem="qVP-H4-kcZ" firstAttribute="centerY" secondItem="Zgp-9u-MXf" secondAttribute="centerY" id="lic-dK-kF7"/>
+                            <constraint firstItem="ruN-gk-YS8" firstAttribute="centerX" secondItem="u3o-hK-fia" secondAttribute="centerX" id="mTd-ge-evT"/>
+                            <constraint firstItem="qVP-H4-kcZ" firstAttribute="leading" secondItem="8Ex-Ia-yOV" secondAttribute="leading" id="tMR-Jz-7NQ"/>
+                            <constraint firstItem="9FA-ZD-ckJ" firstAttribute="leading" secondItem="EGv-pT-012" secondAttribute="leading" id="vvQ-8b-Qj6"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="4tD-ey-wye"/>
                     </view>
